src/styles/global.css
/* ... */
.faq__tf {
  margin-bottom: 25px;
  text-align: center;
}

.faq__tf h2 {
  margin-bottom: 12px;
}

.faq__tf p {
  max-width: 790px;
  margin: 0 auto;
  color: #444345;
}

.faq__wrapper .ac {
  margin: 0 0 14px 0;
  background-color: #fff;
  border: 6px solid #fff;
  border-radius: 30px;
  box-shadow: 0 0 8px 0 rgba(202, 205, 226, 0.3803921569);
  display: flex;
  padding: 8px;
}

.faq__wrapper .ac-header-number {
  color: #8a64e5;
  font-size: 36px;
  font-weight: 500;
  border: 3px solid #8a64e5;
  border-radius: 9999px;
  margin-left: 24px;
  margin-right: 24px;
  box-sizing: content-box;
  height: 2.5ch;
}

.faq__wrapper .ac-header-number > div {
  text-align: center;
  width: 2.5ch;
}

.faq__wrapper .ac-header-title {
  color: #000;
  margin-bottom: 1em;
  font-size: 20px;
  line-height: 24px;
  font-weight: 600;
  display: block;
}

@media (min-width: 991px) {
  .faq__wrapper .ac {
    padding-top: 32px;
    padding-bottom: 32px;
  }

  .faq__wrapper .ac-header-title {
    font-size: 22px;
    line-height: 150%;
  }
}

@media (max-width: 768px) {
  .faq__wrapper .ac-header-number {
    display: none;
  }
  .faq__wrapper .ac {
    padding: 15px;
  }
}

.faq__wrapper .ac-panel-text {
  color: #444345;
  line-height: 140%;
  font-size: 18px;
}

@media (min-width: 991px) {
  .faq__wrapper .ac-panel-text {
    font-size: 20px;
  }
}

.custom-row {
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: column;
}

@media (min-width: 767px) {
  .custom-row {
    flex-flow: row nowrap;
    gap: 38px;
  }
}

.custom-row img {
  margin-bottom: 30px;
}

.single-content {
  padding: 100px 20px 113px;
  z-index: 10;
  position: relative;
  background: white;
}

.single-content img {
  margin-top: 20px;
  margin-bottom: 20px;
}

.single-content:has(+ section) {
  padding-bottom: 0;
}

.single-content h2 {
  font-size: 48px;
  letter-spacing: 0.3px;
}

.single-content h3 {
  font-size: 32px;
  letter-spacing: 0.3px;
}

.single-content h4 {
  font-size: 24px;
  letter-spacing: 0.3px;
}

.single-content hr {
  margin: 48px 0;
  border-top: 1px solid rgba(3, 2, 4, 0.16);
}

.single-content ul {
  padding-left: 20px;
  line-height: 1.5;
}

.single-content ul.share-list {
  display: flex;
  align-items: center;
  flex-flow: row nowrap;
  list-style: none;
  padding: 0;
  margin: 0;
  gap: 21px;
  color: #030204;
}

.single-content ul.share-list a {
  color: #030204;
}

.single-content p,
.single-content ul,
.single-content a {
  /* color: rgba(3, 2, 4, 0.55); */
  color: rgba(0, 0, 0, 0.75);
  margin-bottom: 25px;
}

.single-content p.bigger-text,
.single-content ul.bigger-text {
  font-size: 24px;
}

blockquote {
  display: inline-block;
  width: 100%;
  padding: 0 0 0 16px;
  border-left: 3px solid #6d98cc;
  margin: 0 0 25px;
  background: var(--Linear, linear-gradient(90deg, #6d98cc 0%, #8a64e5 100%));
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  font-weight: 600;
  line-height: 1.5;
}

.news-teaser {
  padding: 114px 20px 0;
  margin: 0;
}

@media (max-width: 990px) {
  .news-teaser {
    padding-bottom: 115px;
  }
}

.news-teaser p {
  color: rgba(3, 2, 4, 0.55);
}

.news-teaser .news__grid {
  margin-top: 63px;
}

@media (min-width: 991px) {
  .news {
    margin-bottom: 140px;
  }
}

.form-subscribe {
  color: #000;
}

.form-subscribe * {
  color: inherit;
}

.form-group {
  display: flex;
  max-width: 267px;
  width: 100%;
  padding: 6px 6px 6px 16px;
  flex-direction: row;
  flex-wrap: nowrap;
  align-items: flex-center;
  gap: 10px;
  border-radius: 4px;
  border: 1px solid rgba(255, 255, 255, 0.07);
  background: rgba(255, 255, 255, 0.1);
  background: white;
  box-shadow: 5px 5px 60px 0px rgba(0, 0, 0, 0.66);
  margin-top: 12px;
}

.form-group button[type="submit"] {
  background: none;
  padding: 0;
  border: none;
  appearance: none;
  height: 38px;
  width: 38px;
  min-width: 38px;
  cursor: pointer;
}

.form-control {
  background: none !important;
  border: none !important;
  font-size: 16px;
  font-weight: 600;
  width: 100%;
  outline: none !important;
  box-shadow: none !important;
}

.form-control::placeholder {
  color: #000;
  opacity: 0.5;
}

table.sponsor-tiers td {
  padding-right: 30px;
}

table.sponsor-tiers td:first-child {
  font-weight: bold;
}

.ac a {
  color: black;
}

.donate .container {
  max-width: none;
}

